@@ -1081,30 +1081,15 @@ function membership_redirect_to_protected() {
 }
 
 function membership_check_expression_match( $host, $list ) {
-
-	$list = array_map('strtolower', array_map('trim', $list ));
-
-	//reg expression match
-	$matchstring = "";
-	foreach($list as $key => $value) {
-		if($matchstring != "") $matchstring .= "|";
-
-		if( stripos($value, '\/') ) {
-			$matchstring .= stripcslashes($value);
-		} else {
-			$matchstring .= $value;
+	$list = array_map( 'strtolower', array_filter( array_map( 'trim', $list ) ) );
+	foreach ( $list as $value ) {
+		$matchstring = mb_stripos( $value, '\/' ) !== false ? stripcslashes( $value ) : $value;
+		if ( preg_match( "#{$matchstring}#i", $host ) ) {
+			return true;
 		}
-
 	}
 
-	// switched to using a character that won't be in a url as the start and end markers
-	$matchstring = "#" . $matchstring . "#i";
-
-	if(preg_match($matchstring, $host, $matches) ) {
-		return true;
-	} else {
-		return false;
-	}
+	return false;
 }
 
 function membership_debug_log( $message ) {
