@@ -1,6 +1,8 @@
 == 3.4.6 ==
 
 * Fixed issues invite codes which appears after each BuddyPress fields
+* Fixed issue with not redirected page after 100% discount coupon was applied
+* Fixed issue with empty page appeared after redirection to protected page
 
 == 3.4.5 ==
 
